src/ui/render/snapshots/rust_hf_downloader__ui__render__snapshot_download_path_popup.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                    ┌Download Model────────────────────────────────────────────┐                    "
"                    │ Download path:                                           │                    "
"                    │ /models/output                                           │                    "
"                    │                                                          │                    "
"                    │ Press Enter to confirm, ESC to cancel                    │                    "
"                    │                                                          │                    "
"                    └──────────────────────────────────────────────────────────┘                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
