src/ui/render/snapshots/rust_hf_downloader__ui__render__snapshot_options_popup.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                  ┌Options (ESC to close)────────────────────────────────────────┐                  "
"                  │  ─── General ──────────────────────────────────────────────  │                  "
"                  │  Default Directory: /home/testuser/models                    │                  "
"                  │  HF Token (optional): [Not set]                              │                  "
"                  │  ─── Download ─────────────────────────────────────────────  │                  "
"                  │  Concurrent Threads: 8                                       │                  "
"                  │  Target Number of Chunks: 20                                 │                  "
"                  │  Min Chunk Size: 5.00 MB                                     │                  "
"                  │  Max Chunk Size: 100.00 MB                                   │                  "
"                  │  Max Retries: 5                                              │                  "
"                  │  Download Timeout (sec): 300                                 │                  "
"                  │  Retry Delay (sec): 1                                        │                  "
"                  │  Progress Update Interval (ms): 200                          │                  "
"                  │  ─── Rate Limiting ────────────────────────────────────────  │                  "
"                  │  Rate Limit: Disabled                                        │                  "
"                  │  Max Download Speed (MB/s): 50.0                             │                  "
"                  │  ─── Verification ─────────────────────────────────────────  │                  "
"                  │  Enable Verification: Enabled                                │                  "
"                  │  Concurrent Verifications: 4                                 │                  "
"                  │  Verification Buffer Size: 1.00 MB                           │                  "
"                  │  Verification Update Interval: 100                           │                  "
"                  │                                                              │                  "
"                  │  j/k or ↑/↓: Navigate | Enter: Edit directory                │                  "
"                  │  +/- or ←/→: Modify values & toggle verification             │                  "
"                  │  ESC: Close                                                  │                  "
"                  └──────────────────────────────────────────────────────────────┘                  "
"                                                                                                    "
"                                                                                                    "
